# docs/swagger.yaml
@@ -1,5 +1,23 @@
 basePath: /api
 definitions:
+  dto.DictPagination:
+    properties:
+      has_next:
+        type: boolean
+      has_previous:
+        type: boolean
+      items:
+        items:
+          additionalProperties: {}
+          type: object
+        type: array
+      limit:
+        type: integer
+      offset:
+        type: integer
+      total:
+        type: integer
+    type: object
   dto.LoginRequest:
     properties:
       email:
@@ -414,30 +432,9 @@ paths:
         "200":
           description: OK
           schema:
-      type: object
-      properties:
-        items:
-          type: array
-          items:
-            $ref: '#/definitions/entity.Flower'
-          limit:
-            type: integer
-            example: 10
-          total:
-            type: integer
-            example: 25
-          from:
-            type: integer
-            example: 0
-          to:
-            type: integer
-            example: 10
-          has_next:
-            type: boolean
-            example: true
-          has_previous:
-            type: boolean
-            example: false
+            items:
+              $ref: '#/definitions/dto.DictPagination'
+            type: array
         "429":
           description: Too Many Requests
           schema:
